src/objects/Archived_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>AWS_S3_URL__c</fullName>
        <description>This is the url to access to remote file on Cloud</description>
        <label>AWS S3 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ArchivedMessage__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Archived Message</label>
        <referenceTo>Archived_Message__c</referenceTo>
        <relationshipLabel>Archived Attachments</relationshipLabel>
        <relationshipName>Archived_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BodyLength__c</fullName>
        <description>The File body lenght when it was on SFDC</description>
        <label>BodyLength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bucket__c</fullName>
        <description>The bucket used to store attachment</description>
        <label>Bucket</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>related Case for this attachment</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Archived Attachments</relationshipLabel>
        <relationshipName>Archived_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ContentType__c</fullName>
        <description>The content type of the attachment.
If the Disallow HTML documents and attachments security setting is enabled for your organization, you cannot upload files with the following file extensions: .htm, .html, .htt, .htx, .mhtm, .mhtml, .shtm, .shtml, .acgi.</description>
        <label>ContentType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the attachment.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OriginalCreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who had created the orignal file on SFDC</description>
        <label>OriginalCreatedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Archived_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Creation_Date__c</fullName>
        <description>Date the original attachment has been created in SFDC</description>
        <label>Original Creation Date</label>
        <type>DateTime</type>
    </fields>
    <label>Archived Attachment</label>
    <nameField>
        <label>Archived Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archived Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>